대략적인 레이아웃 완성

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -135,7 +135,7 @@
 	} 
 	
 	#about {
-		min-height: 1360px;
+		/*min-height: 1360px;*/
 		height: auto;
 		padding: 1.5em 0;
 	}
@@ -213,7 +213,7 @@
 	}
 	
 	#wedding {
-		min-height: 1480px;
+		/* min-height: 1480px; */
 		height: auto;
 		padding: 3em 0;
 	}
@@ -364,7 +364,7 @@
 	} 
 	
 	#about {
-		min-height: 1360px;
+		/* min-height: 1360px; */
 		height: auto;
 		padding: 1.5em 0;
 	}
@@ -444,7 +444,7 @@
 	}
 	
 	#wedding {
-		min-height: 1480px;
+		/*min-height: 1480px;*/
 		height: auto;
 		padding: 3em 0;
 	}
@@ -585,7 +585,7 @@
 	} 
 	
 	#about {
-		min-height: 1360px;
+		/*min-height: 1360px;*/
 		height: auto;
 		padding: 1.5em 0;
 	}
@@ -668,7 +668,7 @@
 	}
 	
 	#wedding {
-		min-height: 1480px;
+		/*min-height: 1480px;*/
 		height: auto;
 		padding: 3em 0;
 	}
@@ -809,7 +809,7 @@
 	} 
 	
 	#about {
-		min-height: 1360px;
+		/*min-height: 1360px;*/
 		height: auto;
 		padding: 1.5em 0;
 	}
@@ -892,7 +892,7 @@
 	}
 	
 	#wedding {
-		min-height: 1480px;
+		/*min-height: 1480px;*/
 		height: auto;
 		padding: 3em 0;
 	}
@@ -1038,7 +1038,7 @@
 	}
 	
 	#about {
-		min-height: 1360px;
+		/*min-height: 1360px;*/
 		height: auto;
 		padding: 1.5em 0;
 	}
@@ -1122,7 +1122,7 @@
 	}
 	
 	#wedding {
-		min-height: 1480px;
+		/*min-height: 1480px;*/
 		height: auto;
 		padding: 3em 0;
 	}
@@ -1264,7 +1264,7 @@
 	}
 	
 	#about {
-		min-height: 1360px;
+		/*min-height: 1360px;*/
 		height: auto;
 		padding: 1.5em 0;
 	}
@@ -1348,7 +1348,7 @@
 	}
 	
 	#wedding {
-		min-height: 1480px;
+		/*min-height: 1480px;*/
 		height: auto;
 		padding: 3em 0;
 	}
@@ -1493,7 +1493,7 @@
 	}
 	
 	#about {
-		min-height: 1400px;
+		/*min-height: 1400px;*/
 		height: auto;
 		padding: 1.5em 0;
 	}
@@ -1620,7 +1620,7 @@
 	}
 	
 	#wedding {
-		min-height: 1480px;
+		/*min-height: 1480px;*/
 		height: auto;
 		padding: 3em 0;
 	}
@@ -1753,7 +1753,7 @@
 	}
 	
 	#about {
-		min-height: 1440px;
+		/*min-height: 1440px;*/
 		height: auto;
 		padding: 1.5em 0;
 	}
@@ -1880,7 +1880,7 @@
 	}
 	
 	#wedding {
-		min-height: 1480px;
+		/*min-height: 1480px;*/
 		height: auto;
 		padding: 3em 0;
 	}
@@ -2006,7 +2006,7 @@
 	}
 	
 	#about {
-		min-height: 1440px;
+		/*min-height: 1440px;*/
 		height: auto;
 		padding: 1.5em 0;
 	}
@@ -2133,7 +2133,7 @@
 	}
 	
 	#wedding {
-		min-height: 1480px;
+		/*min-height: 1480px;*/
 		height: auto;
 		padding: 3em 0;
 	}
